correct spark submit